vlib/v/checker/tests/struct_type_cast_err.out
vlib/v/checker/tests/struct_type_cast_err.vv:5:10: error: cannot cast struct `Foo` to `string`
    3 | fn main() {
    4 |     foo := Foo{}
    5 |     _ := string(foo)
      |          ~~~~~~~~~~~
    6 |     _ := int(foo)
    7 |     _ := u64(foo)
vlib/v/checker/tests/struct_type_cast_err.vv:6:10: error: cannot cast struct `Foo` to `int`
    4 |     foo := Foo{}
    5 |     _ := string(foo)
    6 |     _ := int(foo)
      |          ~~~~~~~~
    7 |     _ := u64(foo)
    8 |     _ := u32(foo)
vlib/v/checker/tests/struct_type_cast_err.vv:7:10: error: cannot cast struct `Foo` to `u64`
    5 |     _ := string(foo)
    6 |     _ := int(foo)
    7 |     _ := u64(foo)
      |          ~~~~~~~~
    8 |     _ := u32(foo)
    9 |     _ := rune(foo)
vlib/v/checker/tests/struct_type_cast_err.vv:8:10: error: cannot cast struct `Foo` to `u32`
    6 |     _ := int(foo)
    7 |     _ := u64(foo)
    8 |     _ := u32(foo)
      |          ~~~~~~~~
    9 |     _ := rune(foo)
   10 |     _ := byte(foo)
vlib/v/checker/tests/struct_type_cast_err.vv:9:10: error: cannot cast struct `Foo` to `rune`
    7 |     _ := u64(foo)
    8 |     _ := u32(foo)
    9 |     _ := rune(foo)
      |          ~~~~~~~~~
   10 |     _ := byte(foo)
   11 |     _ := i8(foo)
vlib/v/checker/tests/struct_type_cast_err.vv:10:10: error: cannot cast struct `Foo` to `byte`
    8 |     _ := u32(foo)
    9 |     _ := rune(foo)
   10 |     _ := byte(foo)
      |          ~~~~~~~~~
   11 |     _ := i8(foo)
   12 |     _ := i64(foo)
vlib/v/checker/tests/struct_type_cast_err.vv:11:10: error: cannot cast struct `Foo` to `i8`
    9 |     _ := rune(foo)
   10 |     _ := byte(foo)
   11 |     _ := i8(foo)
      |          ~~~~~~~
   12 |     _ := i64(foo)
   13 |     _ := int(foo)
vlib/v/checker/tests/struct_type_cast_err.vv:12:10: error: cannot cast struct `Foo` to `i64`
   10 |     _ := byte(foo)
   11 |     _ := i8(foo)
   12 |     _ := i64(foo)
      |          ~~~~~~~~
   13 |     _ := int(foo)
   14 |     _ = &I1(foo)
vlib/v/checker/tests/struct_type_cast_err.vv:13:10: error: cannot cast struct `Foo` to `int`
   11 |     _ := i8(foo)
   12 |     _ := i64(foo)
   13 |     _ := int(foo)
      |          ~~~~~~~~
   14 |     _ = &I1(foo)
   15 | }
