vlib/v/checker/tests/struct_type_cast_err.vv
struct Foo{}

fn main() {
    foo := Foo{}
    _ := string(foo)
    _ := int(foo)
    _ := u64(foo)
    _ := u32(foo)
    _ := rune(foo)
    _ := byte(foo)
    _ := i8(foo)
    _ := i64(foo)
    _ := int(foo)
}

